# adobe-license-decoder.rs

./: .gitattributes  .gitignore  .lfsconfig  .travis.yml  AUTHORS  COPYRIGHT  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_only.yml  ci.yml  publish.yml
rsrc/OperatingConfigs/: QWNyb2JhdERDMXt9MjAxODA3MjAwNA-NDIzOTc1ZTItODQ2Ni00MDU0LTk2ZDEtNWQ4NzMwOWE4NGZk-90.operatingconfig  SW5EZXNpZ24xe30yMDE4MDcyMDA0-NDIzOTc1ZTItODQ2Ni00MDU0LTk2ZDEtNWQ4NzMwOWE4NGZk-90.operatingconfig  SWxsdXN0cmF0b3Ixe30yMDE4MDcyMDA0-MmE0N2E4M2UtNjFmNS00NmM2LWE0N2ItOGE0Njc2MTliOTI5-80.operatingconfig  UGhvdG9zaG9wMXt9MjAxODA3MjAwNA-ODU0YjU5OGQtOTE1Ni00NDZiLWFlZDYtMGQ1ZGM2ZmVhZDBi-80.operatingconfig  acrobat-sdl.operatingconfig  ai-isolated.operatingconfig  ai-lan.operatingconfig  indesign-sdl.operatingconfig  isolated-ai.operatingconfig  online-ps-proxy.operatingconfig  ps-online-proxy.operatingconfig
rsrc/files/: QnJpZGdlMXt9MjAxODA3MjAwNA-OTUzZTViZWYtYWJmMy00NGUxLWFjYjUtZmZhN2MyMDY4YjQx-80.operatingconfig  QnJpZGdlMXt9MjAxODA3MjAwNA-ZGQzMjhhY2MtZTE2Yy00NTI0LTgzOWItZGRkMDUwNTIzNGU0-80.operatingconfig  SWxsdXN0cmF0b3Ixe30yMDE4MDcyMDA0-OTUzZTViZWYtYWJmMy00NGUxLWFjYjUtZmZhN2MyMDY4YjQx-80.operatingconfig  UGhvdG9zaG9wMXt9MjAxODA3MjAwNA-ZGQzMjhhY2MtZTE2Yy00NTI0LTgzOWItZGRkMDUwNTIzNGU0-80.operatingconfig
src/: cli.rs  client.rs  descriptions.rs  lib.rs  main.rs  server.rs  types.rs  utilities.rs
src/client/: cops.rs  descriptions.rs  ngl_shim.rs  sscp.rs  types.rs
src/client/cops/: frl_online.rs  oc.rs
(+1 files in other folders)
