[package]
name = "adobe_license_decoder"
version = "1.4.0"
authors = ["Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.21", features = ["wrap_help"] }
serde_json = "1.0.59"
base64 = "0.13.0"
shellexpand = "2.0.0"
chrono = "0.4.19"
glob = "0.3.0"
keyring = "0.10.1"
eyre = "0.6.5"
visdom = "0.4.0"

[[bin]]
name = "adobe-license-decoder"
path = "src/main.rs"