[package]
name = "adobe_license_toolbox"
version = "1.5.0"
authors = ["Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"
default-run = "adobe-license-decoder"

[dependencies]
structopt = { version = "0.3.21", features = ["wrap_help"] }
serde_json = "1.0.59"
base64 = "0.13.0"
shellexpand = "2.0.0"
chrono = "0.4.19"
glob = "0.3.0"
keyring = { git = "https://github.com/adobeDan/keyring-rs", branch = "master" }
eyre = "0.6.5"
visdom = "0.4.0"
zip = "0.5.11"
