[package]
name = "adobe_license_toolbox"
version = "1.5.0"
authors = ["Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"
default-run = "adobe-license-decoder"

[dependencies]
structopt = { version = "0.3.21", features = ["wrap_help"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
base64 = "0.13.0"
shellexpand = "2.0.0"
chrono = "0.4.19"
glob = "0.3.0"
keyring = "1"
eyre = "0.6.5"
visdom = "0.4.0"
zip = "0.5.11"
sha2 = "0.9.5"
num-traits = "0.2.14"

[dev-dependencies]
assert-json-diff = "2.0.1"
